# RustKeyLogger

./: API_INTEGRATION.md  BUILD_FIX.md  CONVERSION_SUMMARY.md  Cargo.toml  MINGW64_INSTALL.md  QUICK_START.md  README.md  build.rs  uninstall.ps1
src/: get_key_state.rs  key_state.rs  main.rs
